# dobackv2

./: .cursorrules  .deprecados  .editorconfig  .env.example  .gitattributes  .gitignore  .snyk  ANALISIS_COMPLETO_ARCHIVOS_DOBACKSOFT.md  ANALISIS_ESTADO_SISTEMA_ACTUAL.md  ANALISIS_EXHAUSTIVO_PASO_A_PASO.md  ARCHIVOS_SESIONES_Y_FILTROS.md  AUDITORIA_EXHAUSTIVA_DOBACKSOFT.md  AUDITORIA_SISTEMA_SUBIDA.md  CACHE_APLICADO_EXITOSAMENTE.md  CHECKLIST-VERIFICACION-COMPLETA.md  CHECKLIST_VERIFICACION_POST_DEPLOY.md  COMO-INICIAR-EL-SISTEMA.txt  COMO-INICIAR-Y-VER-LOGS.md  COMO_PROBAR_DASHBOARD.md  COMO_SUBIR_A_GITHUB.md  CORRECCIONES_CRITICAS_APLICADAS.md  CORRECCIONES_PAGINA_ADMINISTRACION.md  CORRECCIONES_SELECTOR_Y_ZOOM.md  CORRECCION_BACKEND_DESARROLLO.md  CORRECCION_ERROR_500_BACKEND_DESARROLLO.md  CORRECCION_ERROR_VARIABLES.md  CORRECCION_FILTRADO_GPS_AGRESIVO.md  CORRECCION_POPUP_AUTO_CLOSE.md  CORRECCION_STATE_STRING.md  CREDENCIALES-SISTEMA.txt  CWINDOWSsystem32cmd.exe .txt  DASHBOARD_METRICAS_PROYECTO.md  DIAGRAMA_GANTT_PROYECTO.md  DOCUMENTACION_SISTEMA_COMPLETO.md  Dockerfile  EJECUCION_PLAN_HIBRIDO.md  EJECUTAR_AHORA.md  EJECUTAR_POSTPROCESO.md  ENTREGA_FINAL_95_PORCIENTO.md  ESTADO-ACTUAL-SISTEMA.txt  (+157 more)
.cursor/: mcp.json
.github/: CONFIGURACION_GITHUB_ACTIONS.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.husky/: pre-push
ANALISIS_EXHAUSTIVO_COMPLETO/: ACLARACION_DATOS_POR_VEHICULO.md  ANALISIS_OPERACIONAL_COMPLETO.md  CAMPOS_ESTABILIDAD_DETALLADOS.md  DESCUBRIMIENTOS_CLAVE_DISPOSITIVO.md  DOCUMENTO_FINAL_CONSOLIDADO_COMPLETO.md  ESTADO_FINAL_SISTEMA.md  FLUJO_COMPLETO_SISTEMA_REAL.md  GUIA_COMPLETA_FUNCIONAMIENTO_APLICACION.md  HALLAZGOS_Y_CORRECCIONES_APLICADAS.md  IMPLEMENTACION_COMPLETADA_FINAL.md  INDICE_DOCUMENTACION_ANALISIS.md  INFORME_FINAL_VERIFICACION_COMPLETA.md  LEEME_VERIFICACION.md  LEE_ESTO_PRIMERO_USUARIO.md  PLAN_COMPLETO_IMPLEMENTACION.md  PROGRESO_AUDITORIA_COMPLETA.md  PROGRESO_AUDITORIA_TIEMPO_REAL.md  PROGRESO_IMPLEMENTACION.md  README.md  TRABAJO_COMPLETADO_FINAL.md
IncliGraph_V1._1_Pro/: Base_Datos.cs  Base_Datos_Vehiculos.cs  Carga_Datos.cs  Config_avanzada.cs  DatosDataSet.cs  Exportar.cs  Form1.cs  Historial_Cargas.cs  Interface1.cs  Preferencias.cs  Principal.cs  Usuarios.cs  VehiculosDataSet.cs  barra.cs  cambiarcontra.cs  contra_avanzada.cs  estado_disp.cs  idioma.cs  importacion.cs  log_window.cs  mcHIDInterface.cs  usersDataSet.cs
backend/: .eslintrc.js  (+314 more)
config/: .env.example  Dockerfile  __init__.py  alembic.ini  config.py  config.yaml  database  database_config.py  development.py  docker-compose.yml  env.config  nginx.conf  production.py  project_config.yaml  pyproject.toml  pytest.ini  setup.py  testing.py
config/deployment/: deployment.yml  gunicorn.conf.py  supervisor.conf
config/development/: .bandit  .coveragerc  .editorconfig  .env.example  .flake8  .flaskenv  .isort.cfg  .pre-commit-config.yaml  config.py  development.py  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml  local_settings.py  mypy.ini  nginx.conf  nginx.dev.conf  prometheus.yml  pytest.ini  setup.cfg  supervisord.dev.conf
config/production/: config.py
config/security/: roles.json  rules.json  validation_rules.json
config/testing/: config.py
(+2235 files in other folders)
