[metadata]
name = DobackSoft
version = 2.0.0
description = Sistema de monitoreo y análisis de estabilidad para vehículos de carga pesada
long_description = file: README.md
long_description_content_type = text/markdown
author = Cosigein SL
author_email = info@cosigein.com
url = https://github.com/cosigein/DobackSoft-v2
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.10
install_requires =
    Flask>=3.0.2
    Flask-SQLAlchemy>=3.1.1
    Flask-Migrate>=4.0.5
    Flask-JWT-Extended>=4.6.0
    Flask-Mail>=0.9.1
    Flask-Caching>=2.1.0
    Flask-Limiter>=3.5.0
    Flask-CORS>=4.0.0
    psycopg2-binary>=2.9.9
    redis>=5.0.1
    boto3>=1.34.51
    gunicorn>=21.2.0
    python-dotenv>=1.0.1

[options.packages.find]
where = src

[options.extras_require]
dev =
    black>=24.2.0
    flake8>=7.0.0
    flake8-docstrings>=1.7.0
    isort>=5.13.2
    mypy>=1.8.0
    pytest>=8.0.0
    pytest-cov>=4.1.0
    bandit>=1.7.7
    pre-commit>=3.6.0

[flake8]
max-line-length = 100
extend-ignore = E203, W503
exclude = .git,__pycache__,build,dist,*.egg-info 